<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- Basics -->
    <groupId>com.massivecraft.factions</groupId>
    <artifactId>Factions</artifactId>
    <version>MC-1.21.11-SNAPSHOT</version>
    <packaging>jar</packaging>

    <!-- Info -->
    <name>Factions</name>
    <description>Factions allows the players to team up and claim land as their own and start wars with other factions. This way we hope to inspire politics, intrigue, and team spirit.</description>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <lombok.version>1.18.46</lombok.version>
    </properties>

    <repositories>
        <!-- Paper -->
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <!-- MassiveCore -->
        <repository>
            <id>kjr-repository-snapshots</id>
            <url>https://maven.kjr.sh/snapshots</url>
        </repository>
        <!-- WorldEdit -->
        <repository>
            <id>enginehub</id>
            <url>https://maven.enginehub.org/repo/</url>
        </repository>
        <!-- WorldGuard -->
        <repository>
            <id>sk89q-repo</id>
            <url>https://maven.enginehub.org/repo/</url>
        </repository>
        <!-- Vault -->
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <!-- CoreProtect -->
        <repository>
            <id>playpro-repo</id>
            <url>https://maven.playpro.com</url>
        </repository>
        <!-- Essentials -->
        <repository>
            <id>essentialsx-snapshots</id>
            <url>https://repo.essentialsx.net/snapshots</url>
        </repository>
        <!-- Citizens -->
        <repository>
            <id>citizens-repo</id>
            <url>https://maven.citizensnpcs.co</url>
        </repository>
        <!-- PlaceholderAPI -->
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.helpch.at/releases/</url>
        </repository>
        <!-- LiteBans -->
        <repository>
            <id>z-jitpack</id>
            <url>https://jitpack.io</url>
        </repository>
        <!-- HolographicDisplays -->
        <repository>
            <id>codemc-repo</id>
            <url>https://repo.codemc.io/repository/maven-public/</url>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <!-- FAWE -->
            <dependency>
                <groupId>com.intellectualsites.bom</groupId>
                <artifactId>bom-newest</artifactId>
                <version>1.56</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!-- Dependencies -->
    <dependencies>
        <!-- Paper API -->
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.21.11-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!-- Paper NMS -->
        <dependency>
            <groupId>ca.bkaw</groupId>
            <artifactId>paper-nms</artifactId>
            <version>1.21.11-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!-- MassiveCore -->
        <dependency>
            <groupId>com.massivecraft.massivecore</groupId>
            <artifactId>MassiveCore</artifactId>
            <version>MC-1.21.10-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!-- FastAsyncWorldEdit -->
        <dependency>
            <groupId>com.fastasyncworldedit</groupId>
            <artifactId>FastAsyncWorldEdit-Core</artifactId>
            <scope>provided</scope>
        </dependency>
        <!-- FastAsyncWorldEdit Bukkit -->
        <dependency>
            <groupId>com.fastasyncworldedit</groupId>
            <artifactId>FastAsyncWorldEdit-Bukkit</artifactId>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <artifactId>FastAsyncWorldEdit-Core</artifactId>
                    <groupId>*</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <!-- WorldGuard -->
        <dependency>
            <groupId>com.sk89q.worldguard</groupId>
            <artifactId>worldguard-bukkit</artifactId>
            <version>7.0.9-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!-- Vault -->
        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>1.7</version>
            <scope>provided</scope>
        </dependency>
        <!-- CoreProtect -->
        <dependency>
            <groupId>net.coreprotect</groupId>
            <artifactId>coreprotect</artifactId>
            <version>23.2</version>
            <scope>provided</scope>
        </dependency>
        <!-- EssentialsX -->
        <dependency>
            <groupId>net.essentialsx</groupId>
            <artifactId>EssentialsX</artifactId>
            <version>2.22.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!-- Citizens -->
        <dependency>
            <groupId>net.citizensnpcs</groupId>
            <artifactId>citizensapi</artifactId>
            <version>2.0.42-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!-- Citizens -->
        <dependency>
            <groupId>net.citizensnpcs</groupId>
            <artifactId>citizens-main</artifactId>
            <version>2.0.42-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!-- PlaceholderAPI -->
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.12.2</version>
            <scope>provided</scope>
        </dependency>
        <!-- LiteBans -->
        <dependency>
            <groupId>com.gitlab.ruany</groupId>
            <artifactId>LiteBansAPI</artifactId>
            <version>0.6.1</version>
            <scope>provided</scope>
        </dependency>
        <!-- HolographicDisplays -->
        <dependency>
            <groupId>me.filoghost.holographicdisplays</groupId>
            <artifactId>holographicdisplays-core</artifactId>
            <version>3.0.0</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <pluginRepositories>
        <!-- Paper NMS Plugin -->
        <pluginRepository>
            <id>bytecode.space</id>
            <url>https://repo.bytecode.space/repository/maven-public/</url>
        </pluginRepository>
    </pluginRepositories>

    <!-- Build -->
    <build>
        <!-- Allow for easier building -->
        <defaultGoal>clean package</defaultGoal>
        <finalName>${project.name}-${project.version}</finalName>

        <!-- Resources -->
        <resources>
            <!-- Standard -->
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>*.yml</include>
                </includes>
            </resource>
            <!-- OpenSource -->
            <resource>
                <directory>${project.build.sourceDirectory}</directory>
                <filtering>false</filtering>
            </resource>
        </resources>

        <!-- Build Plugins -->
        <plugins>
            <!-- Compile -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.15.0</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <parameters>true</parameters>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

            <!-- Paper NMS Maven Plugin -->
            <plugin>
                <groupId>ca.bkaw</groupId>
                <artifactId>paper-nms-maven-plugin</artifactId>
                <version>1.4.10</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.2</version>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <paperweight-mappings-namespace>mojang</paperweight-mappings-namespace>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <distributionManagement>
        <repository>
            <id>kjr-releases</id>
            <url>https://maven.kjr.sh/releases</url>
        </repository>
        <snapshotRepository>
            <id>kjr-snapshots</id>
            <url>https://maven.kjr.sh/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

</project>
